--- a/MVCWebTest/Views/Shared/_Layout.cshtml
+++ b/MVCWebTest/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar" style="background-color: white !important;"></span>
                     <span class="icon-bar" style="background-color: white !important;"></span>
                 </button>
-                <img class="navbar" src="~/Content/Images/ONE Logo.png" style="margin:25px;margin-right:50px;height:100px;" />
+                <img class="navbar" src="~/Content/Images/Logo.png" style="margin:25px;margin-right:50px;height:100px;" />
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" style="margin-top:50px;">
